--- a/src/App.css
+++ b/src/App.css
@@ -370,6 +370,16 @@ ul{
   transform: scale(1.1);
   transition: .5s;
 }
+.wrapimgcolor{
+  width: 28px;
+  height: 28px;
+  border: 2px solid #333333;
+  border-radius: 5px;
+}
+.basketimg{
+  width: 100%;
+  height: 100%;
+}
 .inputcolor{
   border:2px solid #333333;
   padding: 4px;
