--- a/src/App.css
+++ b/src/App.css
@@ -381,10 +381,16 @@ ul{
   height: 100%;
 }
 .inputcolor{
+  width: 75px;
+  height: 30px;
   border:2px solid #333333;
   padding: 4px;
   border-radius: 4px;
   background-color:#F5F5F5 ;
+}
+.colortext{
+width: 45px;
+height: 25px;
 }
 .result{
   font-family: 'Inter';
